--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -3,12 +3,12 @@ driver_config:
   require_chef_omnibus: true
 
 platforms:
-  - name: ubuntu-12.04
-    run_list:
-      - recipe[apt::default]
-  - name: ubuntu-10.04
-    run_list:
-      - recipe[apt::default]
+#  - name: ubuntu-12.04
+#    run_list:
+#      - recipe[apt::default]
+#  - name: ubuntu-10.04
+#    run_list:
+#      - recipe[apt::default]
   - name: centos-6.4
     run_list:
       - recipe[yum::epel]
