--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,6 +1,6 @@
 driver_plugin: vagrant
 driver_config:
-  require_chef_omnibus: true
+  require_chef_omnibus: "11.6.0"
 
 platforms:
   - name: ubuntu-12.04
