--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,7 +6,7 @@ platforms:
   - name: ubuntu-12.04
     run_list:
       - recipe[rackspace_apt::default]
-  - name: ubuntu-10.04
+  - name: debian-7.2
     run_list:
       - recipe[rackspace_apt::default]
   - name: centos-6.4
