include chefspec/berks in spec_helper. fix serverspec test.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -4,12 +4,29 @@ driver_config:
 
 platforms:
   - name: ubuntu-12.04
+    driver_config:
+      box: opscode-ubuntu-12.04
+      box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box
     run_list:
       - recipe[rackspace_apt::default]
+    attributes:
+      rackspace_apt:
+        switch:
+          delete_sources_list: true
   - name: debian-7.2
+    driver_config:
+      box: opscode-debian-7.2.0
+      box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.2.0_chef-provisionerless.box
     run_list:
       - recipe[rackspace_apt::default]
+    attributes:
+      rackspace_apt:
+        switch:
+          delete_sources_list: true
   - name: centos-6.4
+    driver_config:
+      box: opscode-centos-6.4
+      box_url: http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.4_chef-provisionerless.box
     run_list:
       - recipe[rackspace_yum::default]
 
