--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,8 +4,14 @@ AlignParameters:
 Encoding:
   Enabled: false
 
+ClassLength:
+  Enabled: false
+
 LineLength:
   Max: 200
 
 HashSyntax:
   EnforcedStyle: hash_rockets
+
+Documentation:
+  Enabled: false
