--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -91,10 +91,11 @@ platforms:
   run_list:
   - recipe[apt]
 
-- name: smartos-1330
+- name: smartos-13.4.0
   driver_plugin: joyent
   driver_config:
-    joyent_image_id: 87b9f4ac-5385-11e3-a304-fb868b82fe10
+#    joyent_image_id: 87b9f4ac-5385-11e3-a304-fb868b82fe10
+    joyent_image_id: ff86eb8a-a069-11e3-ae0e-4f3c8983a91c
     joyent_flavor_id: g3-standard-4-smartos
     username: root
     ssh_key: <%= ENV['SDC_CLI_IDENTITY'] %>
@@ -147,20 +148,22 @@ suites:
       'debian-7.0',
       'ubuntu-12.04',
       'ubuntu-13.10',
-      'smartos-1330',
+      'smartos-13.4.0',
       'omnios-151006'
     ]
     attributes:
       mysql:
        version: '5.5'
+       data_dir: '/data'
 
   - name: server-5.6
     run_list:
     - recipe[mysql::server]
     includes: [
-      'smartos-1330', 
+      'smartos-13.4.0', 
       'omnios-151006'
     ]
     attributes:
       mysql:
         version: '5.6'
+        data_dir: '/data'
