--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -36,6 +36,13 @@ platforms:
     ssh_key_ids: <%= ENV['DIGITAL_OCEAN_SSH_KEY_IDS'] %>
     ssh_key: <%= ENV['DIGITAL_OCEAN_SSH_KEY_PATH'] %>
 
+- name: amazon-2013.09
+  driver_plugin: ec2
+  driver_config:
+    image_id: ami-3be4bc52
+    username: ec2-user
+    ssh_key: <%= ENV['EC2_SSH_KEY_PATH'] %>
+
 - name: fedora-19
   driver_plugin: digitalocean
   driver_config:
@@ -94,7 +101,6 @@ platforms:
 - name: smartos-13.4.0
   driver_plugin: joyent
   driver_config:
-#    joyent_image_id: 87b9f4ac-5385-11e3-a304-fb868b82fe10
     joyent_image_id: ff86eb8a-a069-11e3-ae0e-4f3c8983a91c
     joyent_flavor_id: g3-standard-4-smartos
     username: root
@@ -125,6 +131,7 @@ suites:
     attributes:
       mysql:
         version: '5.0'
+        data_dir: '/data'
 
   - name: server-5.1
     run_list:
@@ -138,6 +145,7 @@ suites:
     attributes:
       mysql:
         version: '5.1'
+        data_dir: '/data'
 
   - name: server-5.5
     run_list:
