--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -145,7 +145,7 @@ suites:
     attributes:
       mysql:
         version: '5.1'
-#        data_dir: '/data'
+        data_dir: '/data'
 
   - name: server-5.5
     run_list:
