MILESTONE: all tests passing. yayer.

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -126,7 +126,7 @@ platforms:
 suites:
   - name: server-5.0
     run_list:
-    - recipe[mysql_test::server]
+    - recipe[mysql_test_default::server]
     includes: [ 'centos-5.8' ]
     attributes:
       mysql:
@@ -135,7 +135,7 @@ suites:
 
   - name: server-5.1
     run_list:
-    - recipe[mysql_test::server]
+    - recipe[mysql_test_default::server]
     includes: [
       'centos-5.8',
       'centos-6.4',
@@ -149,7 +149,7 @@ suites:
 
   - name: server-5.5
     run_list:
-    - recipe[mysql_test::server]
+    - recipe[mysql_test_default::server]
     includes: [
       'centos-5.8',
       'fedora-19',
@@ -166,7 +166,7 @@ suites:
 
   - name: server-5.6
     run_list:
-    - recipe[mysql_test::server]
+    - recipe[mysql_test_default::server]
     includes: [
       'smartos-13.4.0',
       'omnios-151006'
