--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -105,6 +105,8 @@ platforms:
     joyent_flavor_id: g3-standard-4-smartos
     username: root
     ssh_key: <%= ENV['SDC_CLI_IDENTITY'] %>
+  busser:
+    ruby_bindir: '/opt/local/bin/'
   provisioner:
     name: chef_zero
     sudo: false
