adding a smoke testing recipe to match the docs

--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -127,6 +127,13 @@ platforms:
 
 suites:
   #
+  # smoke
+  #
+  - name: smoke
+    run_list:
+    - recipe[smoke]
+
+  #
   # server5.0
   #
   - name: server50-default
