--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -15,7 +15,7 @@ driver_config:
 
 provisioner:
   name: chef_zero
-  require_chef_omnibus: 11.10.4
+  require_chef_omnibus: latest
 
 platforms:
 - name: centos-5.8
