--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -16,7 +16,7 @@ driver_config:
 
 provisioner:
   name: chef_zero
-  require_chef_omnibus: latest
+  require_chef_omnibus: 11.12.8
 
 platforms:
 - name: centos-5.8
@@ -49,6 +49,13 @@ platforms:
   driver_config:
     image_id: ami-6b726502
     username: ec2-user
+    ssh_key: <%= ENV['EC2_SSH_KEY_PATH'] %>
+
+- name: suse-11.3
+  driver_plugin: ec2
+  driver_config:
+    image_id: ami-e8084981
+    username: root
     ssh_key: <%= ENV['EC2_SSH_KEY_PATH'] %>
 
 - name: fedora-19
@@ -208,7 +215,8 @@ suites:
       'ubuntu-13.10',
       'ubuntu-14.04',
       'smartos-13.4.0',
-      'omnios-151006'
+      'omnios-151006',
+      'suse-11.3'
     ]
     attributes:
       mysql:
@@ -225,7 +233,8 @@ suites:
       'ubuntu-12.04',
       'ubuntu-13.10',
       'smartos-13.4.0',
-      'omnios-151006'
+      'omnios-151006',
+      'suse-11.3'
     ]
     attributes:
       mysql:
