--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -6,8 +6,134 @@ provisioner:
 
 platforms:
   - name: centos-5.10
-
-suites:
-  - name: master
+  - name: centos-6.5
+  - name: debian-7.4
     run_list:
-      - recipe[mysql::master]
+      - recipe[apt]
+  - name: fedora-19
+  - name: fedora-20
+  - name: freebsd-9.2
+  - name: freebsd-10.0
+  - name: omnios-r151006j-r1
+    driver:
+      box: omnios-r151006j-r1
+      box_url: http://omnios.omniti.com/media/OmniOS_r151008j-r1.box
+    run_list:
+      - recipe[ips-omniti]
+  - name: ubuntu-10.04
+    run_list:
+      - recipe[apt]
+  - name: ubuntu-12.04
+    run_list:
+      - recipe[apt]
+  - name: ubuntu-14.04
+    run_list:
+      - recipe[apt]
+ 
+suites:
+  - name: client
+    run_list:
+      - recipe[mysql_client_test]
+
+  - name: server50-default
+    run_list:
+      - recipe[mysql_test_custom::server]
+    includes: [ 'centos-5.10' ]
+    attributes:
+      mysql:
+        version: '5.0' 
+
+  - name: server50-custom
+    run_list:
+      - recipe[mysql_test_custom::server]
+    includes: [ 'centos-5.10' ]
+    attributes:
+      mysql:
+        version: '5.0' 
+        port: '3308'
+        data_dir: '/data'
+
+  - name: server51-default
+    run_list:
+    - recipe[mysql_test_custom::server]
+    includes: [
+      'centos-5.10',
+      'centos-6.5',
+      'ubuntu-10.04'
+    ]
+    attributes:
+      mysql:
+        version: '5.1'
+
+  - name: server51-custom
+    run_list:
+    - recipe[mysql_test_custom::server]
+    includes: [
+      'centos-5.10',
+      'centos-6.5',
+      'ubuntu-10.04'
+    ]
+    attributes:
+      mysql:
+        version: '5.1'
+        port: '3308'
+        data_dir: '/data'
+
+  - name: server55-default
+    run_list:
+    - recipe[mysql_test_custom::server]
+    includes: [
+      'fedora-19',
+      'freebsd-9.2',
+      'freebsd-10.0',
+      'debian-7.4',
+      'ubuntu-12.04',
+      'ubuntu-13.04',
+      'ubuntu-14.04',
+      'omnios-r151006j-r1'
+    ]
+    attributes:
+      mysql:
+       version: '5.5'
+
+  - name: server55-custom
+    run_list:
+    - recipe[mysql_test_custom::server]
+    includes: [
+      'fedora-19',
+      'freebsd-9.2',
+      'freebsd-10.0',
+      'debian-7.4',
+      'ubuntu-12.04',
+      'ubuntu-13.04',
+      'omnios-r151006j-r1'
+    ]
+    attributes:
+      mysql:
+       version: '5.5'
+       port: '3308'
+       data_dir: '/data'
+
+  - name: server56-default
+    run_list:
+    - recipe[mysql_test_custom::server]
+    includes: [
+      'ubuntu-14.04',
+      'omnios-r151006j-r1'
+    ]
+    attributes:
+      mysql:
+        version: '5.6'
+
+  - name: server56-custom
+    run_list:
+    - recipe[mysql_test_custom::server]
+    includes: [
+      'ubuntu-14.04',
+      'omnios-r151006j-r1'
+    ]
+    attributes:
+      mysql:
+        version: '5.6'
+        port: '3308'
+        data_dir: '/data'
