--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -15,7 +15,7 @@ platforms:
   - name: freebsd-9.2
     run_list:
       - recipe[freebsd::portsnap]
-  - name: freebsd-10.0
+  - name: freebsd-10.0 # unsupported until Chef 11.14.0
   - name: omnios-r151006j-r1
     driver:
       box: omnios-r151006j-r1
