--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -179,6 +179,7 @@ suites:
         version: '5.0'
         port: '3308'
         data_dir: '/data'
+        server_root_password: 'nondefault'
 
   #
   # server5.1
@@ -213,6 +214,7 @@ suites:
         version: '5.1'
         port: '3308'
         data_dir: '/data'
+        server_root_password: 'nondefault'
 
   #
   # server5.5
@@ -259,6 +261,7 @@ suites:
        version: '5.5'
        port: '3308'
        data_dir: '/data'
+       server_root_password: 'nondefault'
 
   #
   # server56
@@ -294,3 +297,14 @@ suites:
         version: '5.6'
         port: '3308'
         data_dir: '/data'
+        server_root_password: 'nondefault'
+
+  #
+  # wrapper test
+  #
+  - name: server-wrapper
+    run_list:
+    - recipe[mysql_test_wrapper::server]
+    includes: [
+      'ubuntu-14.04',
+    ]
