--- a/.kitchen.cloud.yml
+++ b/.kitchen.cloud.yml
@@ -109,7 +109,7 @@ platforms:
 - name: ubuntu-10.04
   driver_plugin: digitalocean
   driver_config:
-    image_id: 14097
+    image_id: 5566812
     flavor_id: 63
     region_id: 4
     ssh_key_ids: <%= ENV['DIGITAL_OCEAN_SSH_KEY_IDS'] %>
