--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,7 +11,7 @@ MethodLength:
   Enabled: false
 
 LineLength:
-  Max: 330
+  Enabled: false
 
 HashSyntax:
   EnforcedStyle: hash_rockets
@@ -20,7 +20,7 @@ Documentation:
   Enabled: false
 
 CyclomaticComplexity:
-  Max: 12
+  Enabled: false
 
 Style/FileName:
   Enabled: false
