Supporting version and action configuration for mysql package
Signed-off-by: Sean OMeara <someara@opscode.com>

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -25,5 +25,12 @@ PerceivedComplexity:
 CyclomaticComplexity:
   Enabled: false
 
+PerceivedComplexity:
+  Enabled: false
+
 Style/FileName:
   Enabled: false
+
+AllCops:
+  Exclude:
+    - 'Guardfile'
